# keychain-access

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: ci.yml
.github/workflows/: ci.yml  release.yml
keychain_access/: Foundation.pyi  Security.pyi  __init__.py  core.py  exceptions.py
keychain_access/tests/: test_core.py
typings/: Foundation.pyi  Security.pyi
