[tool.poetry]
name = "keychain-access"
version = "0.1.2"
description = "Access to the OSX Keychain API in Python."
authors = ["Max Muoto <maxmuoto@gmail.com>"]
readme = "README.md"
license = "MIT"
include = ["keychain_access/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
pyobjc = ">=10.0.0, <12.0.0"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.364"
ruff = "^0.4.5"
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py39"
line-length = 100
lint.extend-select = ["I"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.pyright]
include = ["keychain_access", "typings"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs",
    "**/venv",
]
pythonVersion = "3.9"
typeCheckingMode = "strict"
