[project]
name = "keychain-access"
version = "1.0.0"
requires-python = ">=3.9, <3.14"
description = "Access to the OSX Keychain API in Python."
authors = [{ name = "Max Muoto", email = "maxmuoto@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ["pyobjc>=10.0.0, <12.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = ["keychain_access"]

[tool.hatch.build.targets.sdist]
exclude = ["*/tests/"]

[tool.hatch.build.targets.wheel]
include = ["keychain_access"]

[dependency-groups]
dev = ["pyright == 1.1.364", "ruff ~= 0.4.5", "pytest >= 8.2.1, <9"]

[tool.ruff]
target-version = "py39"
line-length = 100
lint.extend-select = ["I"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.pyright]
include = ["keychain_access", "typings"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs",
    "**/venv",
]
pythonVersion = "3.9"
typeCheckingMode = "strict"
